...
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/searchChowConstraintView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/chowsCreatedByUser"
                android:layout_width="match_parent"
...
                android:text="@string/search_existing_chows_here"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold|italic" />

            <SearchView
                android:id="@+id/chowsSearchViewMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chowsCreatedByUser"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />

            <ListView
                android:id="@+id/searchChowListViewMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chowsSearchViewMain"
                android:layout_marginBottom="8dp" />

        </RelativeLayout>
...
