<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    tools:context="com.chowpals.chowmein.ViewMyChowsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/searchChowsCreatedByUserCardView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/createChowCardView"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:id="@+id/searchChowsCreatedByUserConstraintView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/chowsCreatedByUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:gravity="center"
                        android:text="@string/chows_created_by_you"
                        android:textColor="@android:color/black"
                        android:textSize="26sp"
                        android:textStyle="bold|italic" />

                    <SearchView
                        android:id="@+id/chowsSearchViewMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/chowsCreatedByUser"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0" />

                    <ListView
                        android:id="@+id/searchChowsCreatedByUserListViewMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/chowsSearchViewMain"
                        android:layout_marginBottom="8dp"
                        tools:ignore="NestedScrolling" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/searchchowsUserHasJoinedCardView"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_below="@id/searchChowsCreatedByUserCardView"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:id="@+id/searchChowsUserHasJoinedConstraintView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/chowsUserHasJoined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:gravity="center"
                        android:text="@string/chows_you_have_joined"
                        android:textColor="@android:color/black"
                        android:textSize="26sp"
                        android:textStyle="bold|italic" />

                    <SearchView
                        android:id="@+id/chowsUserHasJoinedSearchViewMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/chowsUserHasJoined"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0" />

                    <ListView
                        android:id="@+id/searchchowsUserHasJoinedListViewMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/chowsUserHasJoinedSearchViewMain"
                        android:layout_marginBottom="8dp"
                        tools:ignore="NestedScrolling" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
